210704 PRG로 상품중복등록 해결

--- a/Java/inflearn_스프링 웹 MVC/item-service/src/main/resources/templates/basic/addForm.html
+++ b/Java/inflearn_스프링 웹 MVC/item-service/src/main/resources/templates/basic/addForm.html
@@ -27,7 +27,7 @@
     </div>
     <div>
       <label for="quantity">수량</label>
-      <input type="text" id="quantity" name="quantity" class="formcontrol" placeholder="수량을 입력하세요">
+      <input type="text" id="quantity" name="quantity" class="form-control" placeholder="수량을 입력하세요">
     </div>
     <hr class="my-4">
     <div class="row">
