--- a/Java/inflearn_스프링 웹 MVC1&2/springmvc2/form/src/main/resources/templates/form/addForm.html
+++ b/Java/inflearn_스프링 웹 MVC1&2/springmvc2/form/src/main/resources/templates/form/addForm.html
@@ -38,9 +38,19 @@
         <div>판매 여부</div>
         <div>
             <div class="form-check">
-                <input type="checkbox" id="open" name="open" class="form-check-input">
-                <input type="hidden" name="_open" value="on"/> <!--히든 필드 추가-->
+                <input type="checkbox" id="open" name="open" th:field="*{open}" class="form-check-input">
                 <label for="open" class="form-check-label">판매 오픈</label>
+            </div>
+        </div>
+
+        <!-- multi checkbox -->
+        <div>
+            <div>등록 지역</div>
+            <div th:each="region : ${regions}" class="form-check form-check-inline">
+                <input type="checkbox" th:field="*{regions}" th:value="${region.key}"
+                       class="form-check-input">
+                <label th:for="${#ids.prev('regions')}"
+                       th:text="${region.value}" class="form-check-label">서울</label>
             </div>
         </div>
 
