210710 스프링부트 JPA 시작

--- a/Java/inflearn_스프링 웹 MVC1&2/spingmvc1/item-service/src/main/resources/templates/basic/editForm.html
+++ b/Java/inflearn_스프링 웹 MVC1&2/spingmvc1/item-service/src/main/resources/templates/basic/editForm.html
@@ -18,8 +18,7 @@
   <form action="item.html" th:action method="post">
     <div>
       <label for="id">상품 ID</label>
-      <input type="text" id="id" name="id" class="form-control" value="1" th:value="${item.id}"
-             readonly>
+      <input type="text" id="id" name="id" class="form-control" value="1" th:value="${item.id}" readonly>
     </div>
     <div>
       <label for="itemName">상품명</label>
