--- a/Java/inflearn_스프링 웹 MVC1&2/spingmvc1/item-service/src/main/resources/templates/basic/addForm.html
+++ b/Java/inflearn_스프링 웹 MVC1&2/spingmvc1/item-service/src/main/resources/templates/basic/addForm.html
@@ -32,7 +32,8 @@
     <hr class="my-4">
     <div class="row">
       <div class="col">
-        <button class="w-100 btn btn-primary btn-lg" type="submit">상품 등록</button>
+        <button class="w-100 btn btn-primary btn-lg"
+                type="submit">상품 등록</button>
       </div>
       <div class="col">
         <button class="w-100 btn btn-secondary btn-lg"
